fixed icon X not showing with missing bracket

--- a/App/sass/layout/_navigation.scss
+++ b/App/sass/layout/_navigation.scss
@@ -79,7 +79,7 @@
 				transparent 50%,
 				$color-white 50%
 			);
-			background-size: 220%;
+			background-size: 225%;
 			transition: all 0.4s;
 
 			span {
@@ -133,6 +133,30 @@
 		}
 		&::after {
 			top: 0.8rem;
+		}
+
+	}
+
+		&__button:hover &__icon::before {
+			top: -1rem;
+		}
+
+		&__button:hover &__icon::after {
+			top: 1rem;
+		}
+
+		&__checkbox:checked + &__button &__icon {
+			background-color: transparent;
+		}
+
+		&__checkbox:checked + &__button &__icon::before {
+			top: 0;
+			transform: rotate(135deg);
+		}
+
+		&__checkbox:checked + &__button &__icon::after {
+			top: 0;
+			transform: rotate(-135deg);
 		}
 	}
 }
